# nurse-scheduling-optimization

./: .fuse_hidden000056fb00000006  .fuse_hidden0000572d0000000d  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  run.sh
include/: Chromosome.hpp  Employee.hpp  Gene.hpp  Mission.hpp  gene.hpp  global.hpp  instance.hpp  solver.hpp  utils.hpp
instances/100-10/: Distances.csv  Intervenants.csv  Missions.csv
instances/45-4/: .~lock.Distances.csv#  .~lock.Intervenants.csv#  .~lock.Missions.csv#  .~lock.Missions.ods#  Distances.csv  Intervenants.csv  Missions.csv  Missions.ods
instances/66-6/: Distances.csv  Intervenants.csv  Missions.csv
instances/96-6/: .~lock.Missions.csv#  Distances.csv  Intervenants.csv  Missions.csv
report/: benchmark2_45_50000.txt  benchmark_100_50000.txt  benchmark_45_100000.txt  benchmark_95_50000.txt
report/tex/: main.tex  sample.bib
src/: .fuse_hidden000056ce00000008  Chromosome.cpp  Chromosome.hpp  Employee.cpp  Gene.cpp  Gene.hpp  Mission.cpp  benchmark.cpp  gene.cpp  global.hpp  main.cpp  solver.cpp  utils.cpp
